[gd_scene load_steps=14 format=3 uid="uid://sbanvsydiy44"]

[ext_resource type="Script" path="res://scripts/hints.gd" id="1_6bmac"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_74rqn"]
[ext_resource type="PackedScene" uid="uid://cbsgfkxee3uan" path="res://scenes/planet.tscn" id="1_dwni0"]
[ext_resource type="PackedScene" uid="uid://rlkf7yqnjjbk" path="res://scenes/rocket.tscn" id="2_ne1mx"]
[ext_resource type="Texture2D" uid="uid://mrtrx6g2n0g5" path="res://assets/green_planet.png" id="4_pjr5k"]
[ext_resource type="Texture2D" uid="uid://d6l5ijwpuh5o" path="res://assets/hint_a.png" id="5_r7g32"]
[ext_resource type="Texture2D" uid="uid://b7yxpej25vcws" path="res://assets/hint_d.png" id="6_spulv"]
[ext_resource type="Texture2D" uid="uid://bxw528mhg1lb8" path="res://assets/hint_w.png" id="7_vq7bk"]
[ext_resource type="AudioStream" uid="uid://dxcbgr47u8ced" path="res://sfx/music.wav" id="9_ync5c"]

[sub_resource type="Gradient" id="Gradient_2yxkb"]
colors = PackedColorArray(0.012, 0.0138, 0.12, 1, 0.002, 0.0203667, 0.04, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_lmaya"]
noise_type = 3
seed = 2
frequency = 0.3418

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ki2qc"]
width = 4096
height = 4096
color_ramp = SubResource("Gradient_2yxkb")
noise = SubResource("FastNoiseLite_lmaya")

[sub_resource type="CircleShape2D" id="CircleShape2D_t00kh"]

[node name="Game" type="Node"]

[node name="BackGround" type="Sprite2D" parent="."]
position = Vector2(2, 0)
rotation = -1.57079
scale = Vector2(0.482572, 0.480013)
texture = SubResource("NoiseTexture2D_ki2qc")

[node name="Stars" type="Node2D" parent="."]

[node name="Hints" type="Node2D" parent="."]
script = ExtResource("1_6bmac")

[node name="Sprite2D" type="Sprite2D" parent="Hints"]
position = Vector2(-20, -60)
texture = ExtResource("5_r7g32")

[node name="Sprite2D2" type="Sprite2D" parent="Hints"]
position = Vector2(20, -60)
texture = ExtResource("6_spulv")

[node name="Sprite2D3" type="Sprite2D" parent="Hints"]
position = Vector2(0, -86)
texture = ExtResource("7_vq7bk")

[node name="HintsTimer" type="Timer" parent="Hints"]
wait_time = 5.0

[node name="Label" type="RichTextLabel" parent="Hints"]
offset_left = -272.0
offset_top = -188.0
offset_right = 419.0
offset_bottom = 6.99998
scale = Vector2(0.260877, 0.260877)
theme_override_font_sizes/normal_font_size = 70
text = "Collect the stars and dodge missiles"
autowrap_mode = 2

[node name="Label2" type="RichTextLabel" parent="Hints"]
offset_left = 77.0
offset_top = -188.0
offset_right = 849.61
offset_bottom = 6.99998
scale = Vector2(0.260877, 0.260877)
theme_override_font_sizes/normal_font_size = 70
text = "Missiles are faster but less maneuverable"
autowrap_mode = 2
text_direction = 2

[node name="Rocket" parent="." instance=ExtResource("2_ne1mx")]
z_index = 0
position = Vector2(0, -61)

[node name="Planets" type="Node2D" parent="."]

[node name="StaticBody2D" parent="Planets" instance=ExtResource("1_dwni0")]
scale = Vector2(3, 3)

[node name="Sprite2D" type="Sprite2D" parent="Planets/StaticBody2D"]
texture = ExtResource("4_pjr5k")

[node name="MapEdge" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapEdge"]
scale = Vector2(70, 70)
shape = SubResource("CircleShape2D_t00kh")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_74rqn")

[node name="MissilePeriod" type="Timer" parent="GameManager"]
wait_time = 4.0

[node name="Missiles" type="Node2D" parent="."]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ync5c")
volume_db = -0.631
autoplay = true

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2(1386.02, 1386.02)
color = Color(0.0005, 0.001925, 0.01, 0.423529)
invert_enabled = true
polygon = PackedVector2Array(0.505042, 0, 0.487726, -0.130589, 0.437222, -0.252521, 0.357137, -0.357137, 0.252521, -0.437222, 0.130589, -0.487726, 0, -0.505042, -0.130589, -0.487726, -0.252521, -0.437222, -0.357137, -0.357137, -0.437222, -0.252521, -0.487726, -0.130589, -0.505042, 0, -0.487726, 0.130589, -0.437222, 0.252521, -0.357137, 0.357137, -0.252521, 0.437222, -0.130589, 0.487726, 0, 0.505042, 0.130589, 0.487726, 0.252521, 0.437222, 0.357137, 0.357137, 0.437222, 0.252521, 0.487726, 0.130589)

[connection signal="timeout" from="Hints/HintsTimer" to="Hints" method="_on_hints_timer_timeout"]
[connection signal="body_exited" from="MapEdge" to="GameManager" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="GameManager/MissilePeriod" to="GameManager" method="_on_missile_period_timeout"]
